...
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:textColor="@color/black"
            android:text="@={viewModel.inputtext}"
            android:id="@+id/ed_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Enter text"
            android:inputType="text"
            android:textStyle="bold"
...
        <Button
            android:onClick="@{(v)->viewModel.set_edittext()}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/white"
            android:text="@{viewModel.bttext}"
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@id/recycleview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_input" />
...
