<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="startmodel"
            type="com.starapps.kotlinmvvm.repository.model.StartModel" />
        <variable
            name="imageClickInterface"
            type="com.starapps.kotlinmvvm.view.ImageClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{startmodel.name}"
            android:onClick="@{(v) -> imageClickInterface.onStartClick()}"
            app:layout_constraintBottom_toTopOf="@id/tv_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(startmodel.number)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_start" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

